--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -142,3 +142,25 @@
     name={message},
     description={TODO}
 }
+
+\newglossaryentry{message-payload}
+{
+    name={message payload},
+    description={TODO}
+}
+\newglossaryentry{message-header}
+{
+    name={message header},
+    description={TODO}
+}
+\newglossaryentry{header-field}
+{
+	name={header field},
+    description={TODO}
+}
+\newglossaryentry{message-type}
+{
+	name={message type},
+    description={TODO}
+}
+
