--- a/latex_template.tex
+++ b/latex_template.tex
@@ -25,7 +25,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \usepackage{tabu}
 \usepackage{diagbox}
 \usepackage{rotating}
-
+\usepackage{makecell}
 \usepackage{url}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
@@ -44,6 +44,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 	bottom=1.5cm, % Bottom margin
 	%showframe, % Uncomment to show how the type block is set on the page
 }
+\global\tabulinesep=1.2mm
 
 %----------------------------------------------------------------------------------------
 %	Glossary SETTINGS
