--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -171,3 +171,17 @@
 	urldate = {2017-10-20},
 	howpublished={\url{http://borgbackup.readthedocs.io/en/stable/internals/data-structures.html}},
 }
+@ONLINE{birthday-attack,
+	author = {{Wikipedia}},
+	title = {{Birthday attack} - {W}ikipedia{,} The Free Encyclopedia},
+	year = 2017,
+	urldate = {2017-10-23},
+	howpublished={\url{https://en.wikipedia.org/w/index.php?title=Birthday_attack&oldid=797537980}},
+}
+@ONLINE{seagate-zetabyte,
+	author = {{Peter Frisch}},
+	title = {{2016: The Year of the Zettabyte} - Seagate Smart Business},
+	year = 2014,
+	urldate = {2017-10-23},
+	howpublished={\url{https://web.archive.org/web/20141208222542/http://storageeffect.media.seagate.com/2014/07/storage-effect/2016-the-year-of-the-zettabyte/}},
+}
