Unify word caseing in morphological box

--- a/final-submission/appendices/morphological_box.tex
+++ b/final-submission/appendices/morphological_box.tex
@@ -10,7 +10,7 @@ The following paragraphs reason the selected entry in each dimension.
 \paragraph{Redundancy} 
 We originally planned to support \emph{client m-replication}. This, however, is a complex mechanism that requires sophisticated algorithms to work correctly and efficiently. We chose the system \emph{n-replication} option because it is simple to implement in a prototype. Changing this option in the future is hard because it requires fundamental changes in the replication process and the communication protocols.
 
-\paragraph{Storage Unit}
+\paragraph{Storage unit}
 The idea of \emph{chunks} come from Borg Backup. Files are partitioned into chunks using a rolling hash which allows deduplication as well as space efficient backups for large files \cite{borg-data-structures}. These are desired properties in a backup system to minimise network and disk usage.
 \emph{Encrypting chunks} means that deduplication of the same file coming from different users is not possible anymore but is a necessity for privacy. Encryption is not trivial and requires a user concept that is out of scope of the prototype developed in the study project.
 We chose the \emph{plain filesystem} option for the study project to simplify the client implementation. Supporting \emph{encrypted chunks} in the future is possible by just modifying the client.
@@ -38,9 +38,9 @@ A complete language evaluation can be found in \fullref{sec:language-evaluation}
           & \textbf{System n-replication}: The degree of redundancy for the whole system is equal to the amount of nodes in the system.
           \\ \hline
 
-          \textbf{Storage Unit}
-          & \textbf{Plain Files}
-          & Encrypted Files
+          \textbf{Storage unit}
+          & \textbf{Plain files}
+          & Encrypted files
           & Chunks: Cut files into multiple parts and store these individually.
           & Encrypted chunks: Same as chunks, but every chunk is individually encrypted.
           \\ \hline
@@ -55,7 +55,7 @@ A complete language evaluation can be found in \fullref{sec:language-evaluation}
 
 
           \textbf{Storage backend}
-          & \textbf{Plain Filesystem}: Just store all files/chunks as files in one directory with a unique identifier.
+          & \textbf{Plain filesystem}: Just store all files/chunks as files in one directory with a unique identifier.
           & Database: Use an existing database solution (e.g. Git, Redis, RocksDB).
           & Cloud Storage: A proxy to a cloud storage provider (e.g. Amazon S3).
           & Custom: An optimized version of the plain file system option with optimised indexing and compression.
